This blows donkey-balls

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -94,34 +94,34 @@ add_library(shared STATIC ${RTAGS_SHARED_SOURCES})
 target_link_libraries(shared rct)
 
 set(RTAGS_SOURCES
-    CompilerManager.cpp
-    CompletionThread.cpp
-    CursorInfo.cpp
-    CursorInfoJob.cpp
-    DependenciesJob.cpp
-    DumpThread.cpp
-    EventSourceClient.cpp
-    FileManager.cpp
-    FindFileJob.cpp
-    FindSymbolsJob.cpp
-    FollowLocationJob.cpp
-    IndexerJob.cpp
-    JobScheduler.cpp
-    ListSymbolsJob.cpp
-    Preprocessor.cpp
-    Project.cpp
-    QueryJob.cpp
-    RTagsClang.cpp
-    ReferencesJob.cpp
-    ScanThread.cpp
-    Server.cpp
-    Source.cpp
-    StatusJob.cpp)
+  CompilerManager.cpp
+  CompletionThread.cpp
+  CursorInfo.cpp
+  CursorInfoJob.cpp
+  DependenciesJob.cpp
+  DumpThread.cpp
+  EventSourceClient.cpp
+  FileManager.cpp
+  FindFileJob.cpp
+  FindSymbolsJob.cpp
+  FollowLocationJob.cpp
+  IndexerJob.cpp
+  JobScheduler.cpp
+  ListSymbolsJob.cpp
+  Preprocessor.cpp
+  Project.cpp
+  QueryJob.cpp
+  RTagsClang.cpp
+  ReferencesJob.cpp
+  ScanThread.cpp
+  Server.cpp
+  Source.cpp
+  StatusJob.cpp)
 
 include_directories(${CMAKE_CURRENT_LIST_DIR}
-                    rct/include/
-                    rct
-                    ${CMAKE_CURRENT_BINARY_DIR}/rct/include/rct)
+  rct/include/
+  rct
+  ${CMAKE_CURRENT_BINARY_DIR}/rct/include/rct)
 
 # link_directories(${LLVM_LIBRARY_DIRS})
 
@@ -153,6 +153,136 @@ target_link_libraries(rtags
   shared
   ${START_GROUP}
   ${CLANG_LIBS}
+  clangFrontend
+  clangSerialization
+  clangDriver
+  clangTooling
+  clangParse
+  clangSema
+  clangStaticAnalyzerFrontend
+  clangStaticAnalyzerCheckers
+  clangStaticAnalyzerCore
+  clangAnalysis
+  clangRewriteFrontend
+  # clangRewriteCore
+  clangEdit
+  clangAST
+  clangLex
+  clangBasic
+  clang
+  LLVMR600AsmPrinter
+  LLVMSparcDisassembler
+  LLVMMCParser
+  LLVMXCoreInfo
+  LLVMXCoreAsmPrinter
+  LLVMX86Disassembler
+  LLVMAnalysis
+  LLVMMipsAsmPrinter
+  LLVMHexagonCodeGen
+  LLVMPowerPCAsmParser
+  LLVMTableGen
+  LLVMARMCodeGen
+  LLVMSparcAsmParser
+  LLVMSystemZAsmPrinter
+  LLVMSystemZDisassembler
+  LLVMIRReader
+  LLVMR600CodeGen
+  LLVMMBlazeAsmPrinter
+  LLVMMBlazeDisassembler
+  LLVMAArch64Utils
+  LLVMAArch64AsmParser
+  LLVMScalarOpts
+  LLVMNVPTXDesc
+  LLVMMC
+  LLVMSparcAsmPrinter
+  LLVMSelectionDAG
+  LLVMObjCARCOpts
+  LLVMNVPTXCodeGen
+  LLVMMSP430CodeGen
+  LLVMSystemZDesc
+  LLVMMBlazeAsmParser
+  LLVMSystemZCodeGen
+  LLVMCodeGen
+  LLVMVectorize
+  LLVMARMAsmPrinter
+  LLVMR600Info
+  LLVMMipsAsmParser
+  LLVMOption
+  LLVMAsmPrinter
+  LLVMX86AsmParser
+  LLVMMBlazeCodeGen
+  LLVMR600Desc
+  LLVMCellSPUDesc
+  LLVMCppBackendCodeGen
+  LLVMARMDisassembler
+  LLVMMipsInfo
+  LLVMSystemZAsmParser
+  LLVMNVPTXAsmPrinter
+  LLVMSparcInfo
+  LLVMArchive
+  LLVMSystemZInfo
+  LLVMObject
+  LLVMX86Utils
+  LLVMAArch64CodeGen
+  LLVMLTO
+  LLVMHexagonInfo
+  LLVMNVPTXInfo
+  LLVMSparcDesc
+  LLVMPowerPCDesc
+  LLVMXCoreDesc
+  LLVMJIT
+  LLVMCellSPUInfo
+  LLVMBitReader
+  LLVMAArch64AsmPrinter
+  LLVMARMInfo
+  LLVMCellSPUCodeGen
+  LLVMPowerPCCodeGen
+  LLVMAsmParser
+  LLVMX86Info
+  LLVMRuntimeDyld
+  LLVMInstCombine
+  LLVMMipsCodeGen
+  LLVMX86CodeGen
+  LLVMMBlazeInfo
+  LLVMExecutionEngine
+  LLVMAArch64Disassembler
+  LLVMBitWriter
+  LLVMMCJIT
+  LLVMCore
+  LLVMHexagonDesc
+  LLVMPowerPCInfo
+  LLVMipo
+  LLVMAArch64Desc
+  LLVMInstrumentation
+  LLVMTransformUtils
+  LLVMSparcCodeGen
+  LLVMMCAnalysis
+  LLVMMSP430Desc
+  LLVMMSP430Info
+  LLVMMBlazeDesc
+  LLVMAArch64Info
+  LLVMX86Desc
+  LLVMCppBackendInfo
+  LLVMARMDesc
+  LLVMLineEditor
+  LLVMProfileData
+  LLVMipa
+  LLVMMipsDisassembler
+  LLVMDebugInfo
+  LLVMXCoreCodeGen
+  LLVMMSP430AsmPrinter
+  LLVMXCoreDisassembler
+  LLVMSupport
+  LLVMMCDisassembler
+  LLVMX86AsmPrinter
+  LLVMTarget
+  LLVMLinker
+  LLVMInterpreter
+  LLVMPowerPCDisassembler
+  LLVMMipsDesc
+  LLVMARMAsmParser
+  LLVMPowerPCAsmPrinter
+  LLVMHexagonAsmPrinter
   # ${LLVM_LIBNAMES}
   ${END_GROUP}
   -lstdc++
