This blows a little less donkey-balls.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -94,6 +94,7 @@ add_library(shared STATIC ${RTAGS_SHARED_SOURCES})
 target_link_libraries(shared rct)
 
 set(RTAGS_SOURCES
+  Clang.cpp
   CompilerManager.cpp
   CompletionThread.cpp
   CursorInfo.cpp
@@ -294,7 +295,7 @@ target_link_libraries(rdm rtags -lstdc++ ${SYSTEM_LIBS})
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
 
 set(RP_LIBRARIES rtags shared)
-set(RP_SOURCES rp.cpp ClangIndexer.cpp Clang.cpp)
+set(RP_SOURCES rp.cpp ClangIndexer.cpp)
 
 add_executable(rp ${RP_SOURCES})
 target_link_libraries(rp ${RP_LIBRARIES})
